# auctioneer

./: .gitignore  README.md  alembic.ini  config.py  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 14c25eea7714_initialize_db.py  664e3a205f5f_add_guest_to_role.py  6f1d64fe1eaf_inital_migriation_of_user.py  70e914584824_change_float_to_decimal_on_prices_and_.py  75a1c9716401_move_sold_from_auction_to_product.py  ae6ab3624587_add_instant_buy_bool_to_auction.py  b844097ee139_change_float_to_decimal_on_bid_price.py  ebca1aa5bd57_updated_timezon_on_auction_end_time_and_.py
app/: async_mail.py  auth_handler.py  config.py  create_admin.py  db.py  db_handler.py  dependencies.py  main.py  models.py  tasks.py  utils.py
app/models/: auction_model.py  filter_model.py  product_model.py  user_model.py
app/routers/: auctions.py  auth.py  email.py  products.py  users.py
app/services/: async_mail.py  tasks.py
app/templates/: base_email.html  finished_auction_email.html  registration_email.html
app/tests/: test_helpers.py  test_product.py  test_task.py
app/utils/: auth.py  helper.py
