[project]
name = "auctioneer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=4.0.0",
    "alembic>=1.14.1",
    "apscheduler>=3.11.0",
    "colorama>=0.4.6",
    "fastapi[standard]>=0.115.7",
    "jinja2>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "premailer>=3.10.0",
    "psycopg2>=2.9.10",
    "pyjwt>=2.10.1",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
    "sqlmodel>=0.0.22",
    "yagmail>=0.15.293",
]
